--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "babel-preset-react": "^6.24.1",
     "babelify": "^7.3.0",
     "browserify": "^14.3.0",
-    "gulp": "^3.9.1"
+    "gulp": "^3.9.1",
+    "react": "^15.5.3",
+    "react-dom": "^15.5.3"
   }
 }
